Rest-api securities(Spring security, JWT-JSON web token, Swagger api creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,21 @@ server.port=9090
 
 #spring.ai.chat.client.enabled=false
 
-spring.ai.openai.base-url=http://localhost:12434/engines
-spring.ai.openai.api-key=docker
-spring.ai.openai.chat.options.model=ai/llama3.2:3B-Q4_0
-spring.ai.openai.chat.options.temperature=0.2
+#spring.ai.openai.base-url=http://localhost:12434/engines
+#spring.ai.openai.api-key=docker
+#spring.ai.openai.chat.options.model=ai/llama3.2:3B-Q4_0
+#spring.ai.openai.chat.options.temperature=0.2
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dummy
+spring.datasource.url=jdbc:mysql://localhost:3306/actors_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=tiger
 
-spring.ai.chat.memory.repository.jdbc.initialize-schema=always
+#spring.jpa.hibernate.ddl-auto=update
+
+#spring.ai.chat.memory.repository.jdbc.initialize-schema=always
+
+logging.level.org.springframework.security=DEBUG
+
+#spring.security.user.name=prem
+#spring.security.user.password=prem
+#spring.security.user.roles=ADMIN
