--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example.SpringAi_Demo</groupId>
-	<artifactId>SpringAi_Demo1</artifactId>
+	<groupId>com.example.SpringSecurity_Demo</groupId>
+	<artifactId>Spring_Demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringAi_Demo1</name>
+	<name>Spring_Demo</name>
 	<description>Project for Link Generator</description>
 	<url/>
 	<licenses>
@@ -68,6 +68,26 @@
 		    <groupId>io.jsonwebtoken</groupId>
 		    <artifactId>jjwt</artifactId>
 		    <version>0.13.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-api</artifactId>
+		    <version>0.13.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl -->
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-impl</artifactId>
+		    <version>0.13.0</version>
+		    <scope>runtime</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson -->
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-jackson</artifactId>
+		    <version>0.13.0</version>
+		    <scope>runtime</scope>
 		</dependency>
         
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
