Added refresh token functionality and logout functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ logging.level.org.springframework.security=DEBUG
 #spring.security.user.password=prem
 #spring.security.user.roles=ADMIN
 
-spring.profiles.active=qa
+spring.profiles.active=dev
 
 
 # ==========================
@@ -40,3 +40,4 @@ security.jwt.refresh-token-cookie-name=refreshToken
 security.jwt.cookie-secure=true
 security.jwt.cookie-http-only=true
 security.jwt.cookie-same-site=lax
+security.jwt.cookie-domain=localhost
