--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/actors_db
 spring.datasource.username=root
 spring.datasource.password=tiger
 
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 #spring.ai.chat.memory.repository.jdbc.initialize-schema=always
 
